Fix colon alignment for devices

--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,6 @@ h4 {
 .countdown {
   display: flex;
   justify-content: center;
-  align-items: center;
   gap: 12px;
   margin-bottom: 20px;
 }
@@ -65,6 +64,7 @@ h4 {
 .colon {
   font-size: 2em;
   color: #333;
+  margin-top: 4%;
 }
 
 /* Number */
@@ -183,6 +183,10 @@ h4 {
 
   .label {
     font-size: 1.2em;
+  }
+
+  .colon{
+    margin-top: 2%;
   }
 
   h1 {
